Read raw dataset - Github Changes

--- a/README.ipynb
+++ b/README.ipynb
@@ -7,7 +7,8 @@
       "provenance": [],
       "collapsed_sections": [
         "JJHV68yyup90",
-        "G-qtyPJ1u6Ql"
+        "G-qtyPJ1u6Ql",
+        "wwqaiihUH3F6"
       ]
     },
     "kernelspec": {
@@ -22,7 +23,7 @@
         "id": "9TMFWyRksLsB"
       },
       "source": [
-        "#**Ctrl4BI**\n",
+        "# **Ctrl4BI**\n",
         "\n",
         "A helper package for Business Intelligence solutions"
       ]
@@ -137,6 +138,40 @@
             "    Description: Removes PII content from string. Be careful while performing this as this would remove even anything that looks like PII\n",
             "    Returns: [String without PII]\n",
             "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wwqaiihUH3F6"
+      },
+      "source": [
+        "# **PII Scrubbing**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nfxp6r1LH3GG",
+        "outputId": "952f41bf-15f2-41b4-92b2-81f6c4880eaa",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "str1='My DL is A1234567'\n",
+        "print(cleanser.scrub_pii(str1))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "My DL is  --- PII SCRUBBED ----\n"
           ],
           "name": "stdout"
         }
